# weaver

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INIT.md  LICENSE  README.md  SECURITY.md  interview.md  profile.yaml.example  pyproject.toml
.github/workflows/: ci.yml
_config/: context_defaults.ini  defaults.ini.template
commands/: weaver-clone.md  weaver-context.md  weaver-graph.md  weaver-query.md  weaver-secret.md  weaver-skill-new.md
contexts/ai-corpus/: context.ini
docs/: architecture.md  specification.md
extraction/: INDEX.md  README.md
extraction/00-overview/: vision.md
extraction/01-architecture/: directory-layout.md  multi-context.md
extraction/02-cli/: commands.md
extraction/03-install-setup/: install-wizard-config.md
extraction/04-providers/: README.md  auth-and-secrets.md  issue-tracker.md  itsm-and-cloud-logs-and-ci.md  log-search.md  parsers.md  source-control.md  wiki.md
extraction/05-modules/: core-modules.md
extraction/06-skills/: skills-catalog.md
extraction/07-tests/: test-strategy-and-catalog.md
extraction/08-data-models/: schemas.md
extraction/09-ai-integration/: ai-tools-integration.md
extraction/10-ideas-roadmap/: ideas-and-roadmap.md
tests/: conftest.py  test_aggregate_cli.py  test_aggregator_cache.py  test_aggregator_fetcher.py  test_aggregator_sources.py  test_aggregator_state.py  test_auth_resolver.py  test_cli_orchestrator.py  test_condenser_focus.py  test_context_cli.py  test_context_manager.py  test_context_manifest.py  test_dispatcher.py  test_e2e_mail.py  test_fetcher_via_guardian.py  test_gmail_imap.py  test_guardian.py  test_indexer_graph_writer.py  test_indexer_html_strip.py  test_indexer_llm_client.py  test_indexer_models.py  test_indexer_runner.py  test_indexer_state.py  test_mail_classifier.py  test_mail_command.py  test_parsers.py  test_plan_builder.py  test_secret_nbsp.py  test_setup_wizard.py  test_skill_generator.py  test_skill_registry.py  test_warden_store_bridge.py
weaver/: __init__.py  config.py  context_manager.py  guardian.py  paths.py
weaver/aggregator/: __init__.py  _walk_bridge.py  cache.py  fetcher.py  (+3 more)
(+83 files in other folders)
